--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 
     <link rel="icon" type="image/x-icon" href="img\favicon.png">
 
-    <link rel="stylesheet" href="simple-grid.min.css">
+    <link rel="stylesheet" href="bootstrap-grid.min.css">
     <link rel="stylesheet" href="index.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0;">
 </head>
 <body>
 
     <div class="container justify">
         <div class="row" id="first-row">
-            <div class="col-3">
+            <div class="col-md-3 col-sm-12">
                 <img src="img\avatar.jpg" class="avatar" />
             </div>
-            <div class="col-9">
+            <div class="col-md-9 col-sm-12">
                 <h1>Sarah Bakhtiari</h1>
                 <h3>Mechanical Engineer, Writer and an enthusiast of Human Mind</h3>
 
@@ -49,9 +51,9 @@
         <div class="row">
             <div class="col-12">
                 <h2> <img src="img\research_emoji.png" class="emoji"> Research Interests </h2>
-                    <ul>
-                        <li><b>Computational biomechanics</b> </li>
-                    </ul>
+                <ul>
+                    <li><b>Computational biomechanics</b></li>
+                </ul>
             </div>
         </div>
         <div class="row">
