--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-12">
                 <h2> <img src="img\aboutme_emoji.png" class="emoji"> About Me </h2>
-                <p>
+                <p class="justify">
                     I'm Sarah, a Mechanical Engineer from Iran. 
                     I finished my bachelor's degree in <a href="http://www.iust.ac.ir/en" target="_blank">Iran University of Science and Technology</a>.
                     My reseach interests lie primarily in Biomechanics. I'm interested in usage of ultrasound waves for early cancer diagnosis.
@@ -100,7 +100,7 @@
         <div class="row">
             <div class="col-12" id="last-row">
                 <h2> <img src="img\hobbies_emoji.png" class="emoji"> Hobbies </h2>
-                <ul>
+                <ul class="justify">
                     <li><b>Writing:</b><br> I enjoy writing a lot.
                          I often write about my thoughts and feelings in <a href="http://obour.blogfa.com/" target="_blank">my personal blog</a> (written in persian).
                          also, I've written and published a Book called <a href="https://www.goodreads.com/book/show/55762382" target="_blank">"Asymmetric Clouds"</a>, which is a collection of my best short stories and essays.</li>
