updated CV and research interests

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 <h2> <img src="img\research_emoji.png" class="emoji"> Research Interests </h2>
                 <ul>
                     <li><b>Computational biomechanics</b></li>
+                    <li><b>Image-Based Modeling</b></li>
+                    <li><b>Hard & Soft Tissue Biomechanics</b></li>
+                    <li><b>Human Movement Analysis</b></li>
                 </ul>
             </div>
         </div>
