updated CV and email

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="font-heavy"><a href="cv\CV.pdf" target="_blank"><img src="img\cv_emoji.png" class="emoji"> Download my CV</a></div>
                 
                 <div id="social-links">
-                    <a href="mailto:bakhtiary.sara@yahoo.com" target="_blank"><img src="img\email.png"></a>
+                    <a href="mailto:sara_bakhtiari@mecheng.iust.ac.ir" target="_blank"><img src="img\email.png"></a>
                     <a href=""><img src="img\linkedin.png" target="_blank"></a>
                     <a href="https://twitter.com/sarahbkhtry23" target="_blank"><img src="img\twitter.png"></a>
                     <a href="https://www.instagram.com/vanillasarah._/" target="_blank"><img src="img\instagram.png"></a>
