--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <li>Revit</li>
                     <li>Navisworks</li>
                     <li>PIPENET</li>
+                    <li>Arduino</li>
                     <li>Microsoft Office</li>
                 </ul>
                 <b>Programming Languages</b>
