--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
                 <div id="social-links">
                     <a href="mailto:sara_bakhtiari@mecheng.iust.ac.ir" target="_blank"><img src="img\email.png"></a>
-                    <a href=""><img src="img\linkedin.png" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/Sarah-Bakhtiyari/"><img src="img\linkedin.png" target="_blank"></a>
                     <a href="https://twitter.com/sarahbkhtry23" target="_blank"><img src="img\twitter.png"></a>
                     <a href="https://www.instagram.com/vanillasarah._/" target="_blank"><img src="img\instagram.png"></a>
                 </div>
