--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Sarah Bakhtiari</title>
-    <meta name="description" content="Sarah Bakhtiari is a Mechanical Enginner and Writer.">
-    <meta name="keywords" content="Sarah Bakhtiari, Mechanical Engineer, Engineering Student, Writer">
-    <meta name="author" content="Sarah Bakhtiari">
+    <title>Sara Bakhtiari</title>
+    <meta name="description" content="Sara Bakhtiari is a Mechanical Enginner and Writer.">
+    <meta name="keywords" content="Sara Bakhtiari, Mechanical Engineer, Engineering Student, Writer">
+    <meta name="author" content="Sara Bakhtiari">
 
     <link rel="icon" type="image/x-icon" href="img\favicon.png">
 
@@ -22,7 +22,7 @@
                 <img src="img\avatar.png" class="avatar" />
             </div>
             <div class="col-md-9 col-sm-12">
-                <h1>Sarah Bakhtiari</h1>
+                <h1>Sara Bakhtiari</h1>
                 <h3>Mechanical Engineer, Writer and an enthusiast of Human Mind</h3>
 
                 <div class="font-heavy"><a href="cv\CV.pdf" target="_blank"><img src="img\cv_emoji.png" class="emoji"> Download my CV</a></div>
@@ -41,9 +41,9 @@
             <div class="col-12">
                 <h2> <img src="img\aboutme_emoji.png" class="emoji"> About Me </h2>
                 <p class="justify">
-                    I'm Sarah, a Mechanical Engineer from Iran. 
+                    I'm Sara, a Mechanical Engineer from Iran. 
                     I finished my bachelor's degree in <a href="http://www.iust.ac.ir/en" target="_blank">Iran University of Science and Technology</a>.
-                    My reseach interests lie primarily in Biomechanics. I'm interested in usage of ultrasound waves for early cancer diagnosis.
+                    My reseach interests lie primarily in Biomechanics. I'm interested in Mechaincal and Biomechanical Engineering.
                     besides that, I enjoy walking, reading, and writing short stories. 
                 </p>
             </div>
@@ -55,7 +55,7 @@
                     <li><b>Computational biomechanics</b></li>
                     <li><b>Image-Based Modeling</b></li>
                     <li><b>Hard & Soft Tissue Biomechanics</b></li>
-                    <li><b>Human Movement Analysis</b></li>
+                    <li><b>Cardiovascular Anatomy & Physiology</b></li>
                 </ul>
             </div>
         </div>
@@ -67,13 +67,7 @@
                     <li>CATIA</li>
                     <li>AutoCAD</li>
                     <li>SolidWorks </li>
-                    <li>PDMS</li>
-                    <li>CAESAR II</li>
                     <li>COMSOL Multiphysics</li>
-                    <li>Carrier HAP</li>
-                    <li>Revit</li>
-                    <li>Navisworks</li>
-                    <li>PIPENET</li>
                     <li>Arduino</li>
                     <li>Microsoft Office</li>
                 </ul>
@@ -81,10 +75,6 @@
                 <ul>
                     <li>Python</li>
                     <li>MATLAB</li>
-                </ul>
-                <b>Industry Knowledge</b>
-                <ul>
-                    <li>Report Writing</li>
                 </ul>
                 <b>Languages</b>
                 <ul>
@@ -106,8 +96,7 @@
                 <h2> <img src="img\hobbies_emoji.png" class="emoji"> Hobbies </h2>
                 <ul class="justify">
                     <li><b>Writing:</b><br> I enjoy writing a lot.
-                         I often write about my thoughts and feelings in <a href="http://obour.blogfa.com/" target="_blank">my personal blog</a> (written in persian).
-                         also, I've written and published a Book called <a href="https://www.goodreads.com/book/show/55762382" target="_blank">"Asymmetric Clouds"</a>, which is a collection of my best short stories and essays.</li>
+                         I've written and published a Book called <a href="https://www.goodreads.com/book/show/55762382" target="_blank">"Asymmetric Clouds"</a>, which is a collection of my best short stories and essays.</li>
                     <li><b>Playing Setar:</b><br>I play <a href="https://en.wikipedia.org/wiki/Setar" target="_blank">Setar</a>, a type of lute used in Persian traditional music.</li>
                 </ul>
             </div>
