fixed introduction paragraph

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 <p class="justify">
                     I'm Sara, a Mechanical Engineer from Iran. 
                     I finished my bachelor's degree in <a href="http://www.iust.ac.ir/en" target="_blank">Iran University of Science and Technology</a>.
-                    My reseach interests lie primarily in Biomechanics. I'm interested in Mechaincal and Biomechanical Engineering.
-                    besides that, I enjoy walking, reading, and writing short stories. 
+                    My primary research interests are in the field of Biomechanics, with a focus on Mechanical and Biomechanical Engineering. In my free time, I enjoy walking, reading, and writing short stories.
                 </p>
             </div>
         </div>
