fix CV and website

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2> <img src="img\research_emoji.png" class="emoji"> Research Interests </h2>
                 <ul>
                     <li><b>Computational biomechanics</b></li>
-                    <li><b>Image-Based Modeling</b></li>
+                    <li><b>Medical ultrasound & MRI</b></li>
                     <li><b>Hard & Soft Tissue Biomechanics</b></li>
                     <li><b>Cardiovascular Anatomy & Physiology</b></li>
                 </ul>
